@@ -58,12 +58,12 @@
         <version.checkstyle.config>1.0.8.Final</version.checkstyle.config>
         <version.com.google.guava.failureaccess>1.0.3</version.com.google.guava.failureaccess>
         <version.grpc>1.84.0</version.grpc>
-        <version.io.netty.netty>4.1.108.Final</version.io.netty.netty>
         <version.jakarta.annotation>2.1.1</version.jakarta.annotation>
+        <version.jakarta.rs>3.1.0</version.jakarta.rs>
+        <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
+        <version.io.undertow.ee>2.0.1.Final</version.io.undertow.ee>
         <version.javax.annotation-api>1.3.2</version.javax.annotation-api>
         <version.junit>4.13.2</version.junit>
-        <version.kotlin.stdlib>2.4.10</version.kotlin.stdlib>
-        <version.okhttp>5.5.0</version.okhttp>
         <version.org.jboss.arquillian>1.10.2.Final</version.org.jboss.arquillian>
         <version.org.jboss.arquillian.jakarta>10.0.0.Final</version.org.jboss.arquillian.jakarta>
         <version.org.jboss.shrinkwrap>1.2.6</version.org.jboss.shrinkwrap>
@@ -100,6 +100,7 @@
 
         <!-- Build related -->
         <encoding>UTF-8</encoding>
+        <modular.jdk.args />
         <galleon.fork.embedded>true</galleon.fork.embedded>
         <galleon.log.time>true</galleon.log.time>
         <galleon.wildfly.home>/tmp</galleon.wildfly.home>
@@ -121,6 +122,7 @@
         <module>subsystem</module>
         <module>galleon-pack</module>
         <module>testsuite</module>
+        <module>examples</module>
     </modules>
 
     <!-- No dependencies! Dependencies are managed in code-parent -->
@@ -194,6 +196,7 @@
                         <groups>java.,javax.,jakarta.,org.,com.</groups>
                         <staticGroups>*</staticGroups>
                         <removeUnused>true</removeUnused>
+                        <compliance>17</compliance>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -341,25 +344,6 @@
             <build>
                 <defaultGoal>clean install</defaultGoal>
             </build>
-        </profile>
-        <profile>
-            <id>examples</id>
-            <modules>
-                <module>examples</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>jdk9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <properties>
-                <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
-                    --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-                    --add-modules=java.se
-                </modular.jdk.args>
-            </properties>
         </profile>
     </profiles>
 
